fix style for dark mode

--- a/portfolio/.vuepress/theme/styles/theme.styl
+++ b/portfolio/.vuepress/theme/styles/theme.styl
@@ -204,5 +204,11 @@ th, td
 .navbar .links, .search-box input
   background-color transparent
 
+.darkmode--activated .page select,
+.darkmode--activated .page input,
+.darkmode--activated .page textarea,
+.darkmode--activated .page select
+  background-color transparent
+
 img, .darkmode-ignore
   isolation auto !important
